# xstatic-angular

./: .gitignore  .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py
xstatic/pkg/angular/: __init__.py
xstatic/pkg/angular/data/: angular-animate.js  angular-aria.js  angular-cookies.js  angular-loader.js  angular-message-format.js  angular-messages.js  angular-mocks.js  angular-parse-ext.js  angular-resource.js  angular-route.js  angular-sanitize.js  angular-scenario.js  angular-touch.js  angular.js  errors.json  version.json
