[metadata]
name = XStatic-Angular
description = Angular 1.5.8 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://angularjs.org
keywords = angular xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
