[metadata]
name = XStatic-Angular
description = Angular 1.8.2 (XStatic packaging standard)
description_file = README.rst
maintainer = Rob Cresswell
maintainer_email = robert.cresswell@outlook.com
home_page = http://angularjs.org
keywords = angular xstatic
license = MIT
zip_safe = False

[bdist_wheel]
universal = True
